--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -53,7 +53,7 @@
 
               <div *ngFor="let comentario of comentarios[publicacion.idPublicacion!]" class="comment d-flex justify-content-between align-items-start mt-2 p-2 bg-light rounded">
                 <div>
-                  <span class="fw-bold">{{ auth.getUsername() }}</span>
+                  <span class="fw-bold">{{ getUsernameById(comentario.idUsuario) }}</span>
                   <p class="mb-0">{{ comentario.contenido }}</p>
                 </div>
                 <button *ngIf="authEstaLogeado() && comentario.idUsuario === userId"
