--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -151,3 +151,17 @@ textarea::placeholder {
   font-size: 2rem;
   color: #ffca28;
 }
+
+.post-info h6,
+.post-info small {
+  color: #ffffff !important;
+}
+
+/* Align comment button to the right */
+
+.comment-input-section input {
+  flex: 1;
+  min-width: 0;
+  margin-left: auto;
+}
+
